// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a Card with Header & Footer 1`] = `"<div id="root"><div data-blade-component="card" class="BaseBox-bmPWx CardRootweb__StyledCardRoot-sc-1nb70ck-0 iAbwvA TtxLe"><div elevation="lowRaised" data-blade-component="base-box" class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 bcWxdc cGyVzL"><div data-blade-component="card-header" class="BaseBox-bmPWx dVKABc"><div data-blade-component="base-box" class="BaseBox-bmPWx biCNyr"><div data-blade-component="base-box" class="BaseBox-bmPWx gTkVyh"><div data-blade-component="base-box" class="BaseBox-bmPWx zthMO"><svg aria-hidden="true" data-blade-component="icon" height="20px" viewBox="0 0 24 24" width="20px" fill="none" class="Svgweb__StyledSvg-vcmjs8-0"><path d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z" fill="hsla(212, 39%, 16%, 1)" data-blade-component="svg-path"></path><path d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z" fill="hsla(212, 39%, 16%, 1)" data-blade-component="svg-path"></path><path d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z" clip-rule="evenodd" fill="hsla(212, 39%, 16%, 1)" fill-rule="evenodd" data-blade-component="svg-path"></path></svg></div><div data-blade-component="base-box" class="BaseBox-bmPWx ihuchP"><div data-blade-component="base-box" class="BaseBox-bmPWx mKtKh"><p class="StyledBaseText-dVBfTO kICEzD" data-blade-component="text">Card Header</p><div data-blade-component="base-box" class="BaseBox-bmPWx jOqpMP"><div data-blade-component="counter" class="BaseBox-bmPWx ePenKG"><div data-blade-component="base-box" class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 cTQuSp dbfGbJ"><div data-blade-component="base-box" class="BaseBox-bmPWx iUxudu"><p class="StyledBaseText-dVBfTO dTGEcz" data-blade-component="text">12</p></div></div></div></div></div><p class="StyledBaseText-dVBfTO licaLZ" data-blade-component="text">Card subtitle</p></div></div><div data-blade-component="base-box" class="BaseBox-bmPWx bLJxIg"><div data-blade-component="badge" class="BaseBox-bmPWx ePenKG"><div data-blade-component="base-box" class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 bgUwrl bMPocw"><div data-blade-component="base-box" class="BaseBox-bmPWx iUxudu"><p class="StyledBaseText-dVBfTO iDpGlA" data-blade-component="text">NEW</p></div></div></div></div></div><div data-blade-component="divider" role="separator" class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 bWVnPN WrXok"></div></div><div data-blade-component="card-body" class="BaseBox-bmPWx"><p class="StyledBaseText-dVBfTO fAQkza" data-blade-component="text">Plain Card</p></div><div data-blade-component="card-footer" class="BaseBox-bmPWx cdqgjM"><div data-blade-component="divider" role="separator" class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 bWVnPN WrXok"></div><div data-blade-component="base-box" class="BaseBox-bmPWx jjVlQX"><div data-blade-component="base-box" class="BaseBox-bmPWx edNXIx"><p class="StyledBaseText-dVBfTO gXTKyw" data-blade-component="text">Card Footer</p><p class="StyledBaseText-dVBfTO eETJTC" data-blade-component="text">Card footer subtitle</p></div><div data-blade-component="base-box" class="BaseBox-bmPWx jwvbFL"><div data-blade-component="base-box" class="BaseBox-bmPWx brkcZZ"><button type="button" data-blade-component="button" role="button" class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 cxbnnu"><div data-blade-component="base-box" class="BaseBox-bmPWx AnimatedButtonContentweb__AnimatedButtonContent-sc-1fkx0t6-0  eHcfsa"><div data-blade-component="base-box" class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 LeezU esItiH"><div class="StyledBaseText-dVBfTO RwjIC" data-blade-component="base-text">Delete</div></div></div></button></div><div data-blade-component="base-box" class="BaseBox-bmPWx kVSNdI"></div><div data-blade-component="base-box" class="BaseBox-bmPWx brkcZZ"><button type="button" data-blade-component="button" role="button" class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 cAjBUc"><div data-blade-component="base-box" class="BaseBox-bmPWx AnimatedButtonContentweb__AnimatedButtonContent-sc-1fkx0t6-0  eHcfsa"><div data-blade-component="base-box" class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 LeezU esItiH"><div class="StyledBaseText-dVBfTO eGcQGV" data-blade-component="base-text">Save</div></div></div></button></div></div></div></div></div></div></div>"`;

exports[`<Card /> should render a Card with Header & Footer 2`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c4.c4.c4.c4.c4 {
  margin-bottom: 12px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 12px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 8px;
}

.c8.c8.c8.c8.c8 {
  margin-right: 16px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11.c11.c11.c11.c11 {
  margin-left: 8px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c13.c13.c13.c13.c13 {
  min-height: 20px;
  background-color: hsla(211,20%,52%,0.09);
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

.c18.c18.c18.c18.c18 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c19.c19.c19.c19.c19 {
  text-align: left;
  height: 20px;
  background-color: hsla(211,20%,52%,0.09);
}

.c22.c22.c22.c22.c22 {
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c25.c25.c25.c25.c25 {
  margin-top: 12px;
}

.c26.c26.c26.c26.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 12px;
}

.c27.c27.c27.c27.c27 {
  text-align: left;
}

.c30.c30.c30.c30.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: 0px;
  margin-left: 16px;
}

.c31.c31.c31.c31.c31 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c34.c34.c34.c34.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c37.c37.c37.c37.c37 {
  margin-left: 16px;
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c20.c20.c20.c20.c20 {
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c10.c10.c10.c10.c10 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c17.c17.c17.c17.c17 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c21.c21.c21.c21.c21 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c24.c24.c24.c24.c24 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c28.c28.c28.c28.c28 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c29.c29.c29.c29.c29 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c36.c36.c36.c36.c36 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c39.c39.c39.c39.c39 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c32.c32.c32.c32.c32 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(227,100%,59%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c32.c32.c32.c32.c32:hover {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
}

.c32.c32.c32.c32.c32:active {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
}

.c32.c32.c32.c32.c32:focus-visible {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c32.c32.c32.c32.c32 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c38.c38.c38.c38.c38 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c38.c38.c38.c38.c38:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c38.c38.c38.c38.c38:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c38.c38.c38.c38.c38:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c38.c38.c38.c38.c38 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c33.c33.c33.c33.c33 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c35.c35.c35.c35.c35 {
  opacity: 1;
}

.c14.c14.c14.c14.c14 {
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c23.c23.c23.c23.c23 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (min-width:320px) {
  .c22.c22.c22.c22.c22 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c22.c22.c22.c22.c22 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c22.c22.c22.c22.c22 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c22.c22.c22.c22.c22 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c22.c22.c22.c22.c22 {
    border-bottom-style: solid;
  }
}

<div
  id="root"
>
  <div
    class="c0 c1"
    data-blade-component="card"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <div
        class="c4"
        data-blade-component="card-header"
      >
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                  data-blade-component="svg-path"
                  fill="hsla(212, 39%, 16%, 1)"
                />
                <path
                  d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                  data-blade-component="svg-path"
                  fill="hsla(212, 39%, 16%, 1)"
                />
                <path
                  clip-rule="evenodd"
                  d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                  data-blade-component="svg-path"
                  fill="hsla(212, 39%, 16%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="c8"
              data-blade-component="base-box"
            >
              <div
                class="c9"
                data-blade-component="base-box"
              >
                <p
                  class="c10"
                  data-blade-component="text"
                >
                  Card Header
                </p>
                <div
                  class="c11"
                  data-blade-component="base-box"
                >
                  <div
                    class="c12"
                    data-blade-component="counter"
                  >
                    <div
                      class="c13 c14"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c15"
                        data-blade-component="base-box"
                      >
                        <p
                          class="c16"
                          data-blade-component="text"
                        >
                          12
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="c17"
                data-blade-component="text"
              >
                Card subtitle
              </p>
            </div>
          </div>
          <div
            class="c18"
            data-blade-component="base-box"
          >
            <div
              class="c12"
              data-blade-component="badge"
            >
              <div
                class="c19 c20"
                data-blade-component="base-box"
              >
                <div
                  class="c15"
                  data-blade-component="base-box"
                >
                  <p
                    class="c21"
                    data-blade-component="text"
                  >
                    NEW
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c22 c23"
          data-blade-component="divider"
          role="separator"
        />
      </div>
      <div
        class=""
        data-blade-component="card-body"
      >
        <p
          class="c24"
          data-blade-component="text"
        >
          Plain Card
        </p>
      </div>
      <div
        class="c25"
        data-blade-component="card-footer"
      >
        <div
          class="c22 c23"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c26"
          data-blade-component="base-box"
        >
          <div
            class="c27"
            data-blade-component="base-box"
          >
            <p
              class="c28"
              data-blade-component="text"
            >
              Card Footer
            </p>
            <p
              class="c29"
              data-blade-component="text"
            >
              Card footer subtitle
            </p>
          </div>
          <div
            class="c30"
            data-blade-component="base-box"
          >
            <div
              class="c31"
              data-blade-component="base-box"
            >
              <button
                class="c32"
                data-blade-component="button"
                role="button"
                type="button"
              >
                <div
                  class=" c33"
                  data-blade-component="base-box"
                >
                  <div
                    class="c34 c35"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c36"
                      data-blade-component="base-text"
                    >
                      Delete
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="c37"
              data-blade-component="base-box"
            />
            <div
              class="c31"
              data-blade-component="base-box"
            >
              <button
                class="c38"
                data-blade-component="button"
                role="button"
                type="button"
              >
                <div
                  class=" c33"
                  data-blade-component="base-box"
                >
                  <div
                    class="c34 c35"
                    data-blade-component="base-box"
                  >
                    <div
                      class="c39"
                      data-blade-component="base-text"
                    >
                      Save
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a Interactive Card with href 1`] = `"<div id="root"><div href="https://google.com" data-blade-component="card" class="BaseBox-bmPWx CardRootweb__StyledCardRoot-sc-1nb70ck-0 iAbwvA TtxLe"><div elevation="lowRaised" data-blade-component="base-box" class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 bcWxdc cGyVzL"><a href="https://google.com" data-blade-component="card-link-overlay" aria-pressed="false" class="LinkOverlayweb__LinkOverlay-ugib1o-0 cmIkCR"></a><div data-blade-component="card-body" class="BaseBox-bmPWx"><p class="StyledBaseText-dVBfTO fAQkza" data-blade-component="text">Plain Card</p></div></div></div></div>"`;

exports[`<Card /> should render a Interactive Card with href 2`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div
  id="root"
>
  <div
    class="c0 c1"
    data-blade-component="card"
    href="https://google.com"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <a
        aria-pressed="false"
        class="c4"
        data-blade-component="card-link-overlay"
        href="https://google.com"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        <p
          class="c5"
          data-blade-component="text"
        >
          Plain Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a Interactive Card with onClick 1`] = `"<div id="root"><div data-blade-component="card" class="BaseBox-bmPWx CardRootweb__StyledCardRoot-sc-1nb70ck-0 iAbwvA TtxLe"><div elevation="lowRaised" data-blade-component="base-box" class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 bcWxdc cGyVzL"><button data-blade-component="card-link-overlay" aria-pressed="false" class="LinkOverlayweb__LinkOverlay-ugib1o-0 cmIkCR"></button><div data-blade-component="card-body" class="BaseBox-bmPWx"><p class="StyledBaseText-dVBfTO fAQkza" data-blade-component="text">Plain Card</p></div></div></div></div>"`;

exports[`<Card /> should render a Interactive Card with onClick 2`] = `
.c0.c0.c0.c0.c0 {
  display: block;
  border-radius: 4px;
}

.c2.c2.c2.c2.c2 {
  text-align: left;
  padding: 24px;
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  box-shadow: 0px 2px 16px 0px hsla(217,56%,17%,0.10);
}

.c3.c3.c3.c3.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
}

.c4.c4.c4.c4.c4 {
  all: unset;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  padding: 0;
  position: static;
}

.c4.c4.c4.c4.c4:before {
  content: '';
  cursor: inherit;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
}

.c1.c1.c1.c1.c1 {
  box-shadow: 0px 0px 0px 2px transparent;
  cursor: initial;
}

.c1.c1.c1.c1.c1 a[href]:not(a[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c1.c1.c1.c1.c1 button:not(button[data-blade-component="card-link-overlay"]) {
  z-index: 2;
  position: relative;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div
  id="root"
>
  <div
    class="c0 c1"
    data-blade-component="card"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <button
        aria-pressed="false"
        class="c4"
        data-blade-component="card-link-overlay"
      />
      <div
        class=""
        data-blade-component="card-body"
      >
        <p
          class="c5"
          data-blade-component="text"
        >
          Plain Card
        </p>
      </div>
    </div>
  </div>
</div>
`;
